fixed form label text align

--- a/sass/03-components/_modal.scss
+++ b/sass/03-components/_modal.scss
@@ -61,6 +61,11 @@
 
   &__label {
     display: block;
+    @include respond(phone) {
+      text-align: left;
+      margin: 1rem auto;
+      width: 90%;
+    }    
   } 
 
   &__input {
@@ -80,13 +85,17 @@
     width: 50%;
     @include respond(phone) {
       margin: auto;
+      justify-content: space-evenly;
     }
   }
 
   &__radio-group {
     margin-right: 5rem;
     @include respond(phone) {
-      margin-right: 2rem;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 
