--- a/sass/04-layout/_side-nav.scss
+++ b/sass/04-layout/_side-nav.scss
@@ -30,7 +30,8 @@
     padding: 3rem;
 
     @include respond(phone) {
-      padding: 0;
+      padding: 3rem;
+      text-align: left;
     }
   }
 
